Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20208

`winrtrunner` should not have `--install` as argument when called from Qt Creator

XMLWordPrintable

    • 181b935c69446cb22417a2651469010779ce25bb (qt-creator/qt-creator/4.8)

      Passing `--install` (there by default when called from Qt Creator's Run) forces the reinstall of the app which destroys the local app files, i.e whatever is in C:\Users\username\AppData\Local\Packages\app-uuid\LocalState. This seems to be the only directory that a WinRT app is allowed to write to. In short, Running the app from Qt Creator destroys all files previously created by the app. For now the solution is to Run once from Qt Creator and launch from the Start Menu subsequently.

      Manually calling `winrtrunner` with `-install` omitted results in a more sensible behavior since `-start` already covers the installation of the app if not yet installed. In my opinion, this should be the behavior in Qt Creator too.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            ayberkozgur Ayberk Özgür
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes